--- a/resultados.html
+++ b/resultados.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <h1>Acceso Restringido</h1>
-  <p>Ingresa la contraseña para ver los resultados del torneo.</p>
+  <p>Ingresa la contraseña para ver los resultados de la votación.</p>
   <input type="password" id="password" placeholder="Contraseña">
   <br>
   <button onclick="checkPassword()">Ingresar</button>
